--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icons8_puzzle_128"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Puzzler">
+        <activity
+            android:name=".PuzzleSelectionActivity"
+            android:exported="false"
+            android:label="@string/title_activity_puzzle_selection"
+            android:theme="@style/Theme.Puzzler.NoActionBar" />
         <activity
             android:name=".ConfigurePuzzleActivity"
             android:exported="false" />
